--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -14,10 +14,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: cd frontend
       - run: npm ci
         working-directory: ./frontend
-      - run: npm test
+      - run: npm run build
         working-directory: ./frontend
 
   publish-gpr:
